name:                 ll-picosat
description:          dirt simple picosat bindings
version:              0.1.0.0
license-file:         LICENSE
author:               Daniel Waterworth
maintainer:           Da.Waterworth@gmail.com
build-type:           Simple
cabal-version:        >=1.10

library
  includes:           picosat.h
  extra-libraries:    picosat
  include-dirs:       /usr/include/picosat/
  exposed-modules:    Solver.Picosat
  build-depends:      base >=4.7 && <4.8
  hs-source-dirs:     src
  default-language:   Haskell2010
